sample-spring/prod-demo/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: sample-spring
    app.kubernetes.io/name: sample-spring
  name: sample-spring
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: sample-spring.demo.mzdev.be
      http:
        paths:
          - backend:
              serviceName: sample-spring
              servicePort: 80
            path: /
    - host: sample-spring.demo.nalbam.com
      http:
        paths:
          - backend:
              serviceName: sample-spring
              servicePort: 80
            path: /
  tls:
    - hosts:
        - sample-spring.demo.mzdev.be
      secretName: sample-spring-mzdev-tls
    - hosts:
        - sample-spring.demo.nalbam.com
      secretName: sample-spring-nalbam-tls
